# sapas

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/en/: 01_quick_start.md  02_architecture.md  03_yaml_configuration.md  04_criteria_format.md  05_protocols.md  06_script_api_reference.md  07_how_to_build_a_station.md  08_troubleshooting_faq.md  09_tui_guide.md  README.md
docs/zh/: 01_quick_start.md  02_architecture.md  03_yaml_configuration.md  04_criteria_format.md  05_protocols.md  06_how_to_build_a_station.md  06_script_api_reference.md  07_how_to_build_a_station.md  07_script_api_reference.md  08_troubleshooting_faq.md  09_tui_guide.md  README.md
example/: LICENSE  site_infra.yaml
example/Alishan/configs/: project.yaml
example/Alishan/criteria/: custom_args_criteria.csv  get_cpu_serial_number_criteria.csv  get_mcu_version_criteria.csv  get_os_name_criteria.csv  set_context_criteria.csv  verify_mac_adress_criteria.csv  (+1 more)
sapas/: __init__.py  cli.py
sapas-tui/: app.py  dashboard.tcss
sapas-tui/components/: __init__.py  log_view.py  steps_table.py
sapas-tui/engine/: runner_worker.py
sapas-tui/screens/: quit_confirm.py
sapas/core/: __init__.py  action_item.py  aggregator.py  base_item.py  builtins.py  flow_loader.py  measure_proxy.py  prompt.py  runner.py  test_item.py  user_runner.py  utils.py
sapas/drivers/: __init__.py
sapas/engine/: script_executor.py
sapas/modules/: log.py  message.py
sapas/runtime/: connection_manager.py  context.py  runtime.py
sapas/tui/: __init__.py  app.py  dashboard.tcss  sapas_tui_dashboard.py
(+43 files in other folders)
